[package]
name = "pullup"
description = "Convert between markup formats"
license = "MIT OR Apache-2.0"
authors = ["Christian Legnitto <christian@legnitto.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
markdown = ["dep:pulldown-cmark"]
mdbook = ["dep:pulldown-mdbook"]
typst = ["dep:pulldown-typst"]

[dependencies]
pulldown-cmark = { version = "0.9.2", optional = true }
pulldown-mdbook = { version = "0.1", path = "../pulldown-mdbook", optional = true }
pulldown-typst = { version = "0.1", path = "../pulldown-typst", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]
