[package]
name = "pulldown_mdbook"
version = "0.2.0"
description = "A pull parser for mdBook"
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["Christian Legnitto <christian@legnitto.com>"]

[dependencies]
mdbook = { version = "0.4.35", default-features = false }
pulldown-cmark = "0.9.3"

[dev-dependencies]
similar-asserts = "1.5.0"
