[package]
name = "pulldown_typst"
version = "0.1.0"
description = "A pull parser for Typst markup"
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["Christian Legnitto <christian@legnitto.com>"]

[dependencies]
# TODO: Remove this, only using for `CowStr`.
pulldown-cmark = { version = "0.9.3", default-features = false }
