[package]
name = "pulldown_typst"
version = "0.3.6"
description = "A pull parser for Typst markup"
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["Christian Legnitto <christian@legnitto.com>"]

[features]
tracing = ["dep:tracing"]

[dependencies]
tracing = { version = "0.1.40", optional = true }
# TODO: Remove this, only using for `CowStr`.
pulldown-cmark = { version = "0.9.3", default-features = false }
